タイトルを白に変更

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 
 <body>
 	<div style="background: url(./images/4-100.jpg) repeat;">
-		<h1>鶴田 拓海のホームページ</h1>
+		<h1>
+			<font color="white">鶴田 拓海のホームページ</font>
+		</h1>
 	</div>
 </body>
 
