タイトルをMS P 明朝に変更

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	<div style="background: url(./images/4-100.jpg) repeat;">
 		<h1>
-			<font color="white">鶴田 拓海のホームページ</font>
+			<font color="white" face="ＭＳ Ｐ明朝">鶴田 拓海のホームページ</font>
 		</h1>
 	</div>
 </body>
