--- a/index.html
+++ b/index.html
@@ -11,6 +11,23 @@
 		<h1>
 			<font color="white" face="ＭＳ Ｐ明朝">鶴田 拓海のホームページ</font>
 		</h1>
+		<!--タグはここから-->
+		<table border="0" cellspacing="0" cellpadding="0">
+			<tr>
+				<td align="center"><a href="http://www.rays-counter.com/"><img
+							src="http://www.rays-counter.com/d491_f6_017/6127e0667a828/" alt="アクセスカウンター" border="0"></a>
+				</td>
+			</tr>
+			<tr>
+				<td align="center" style="font-size:xx-small"><img
+						src="http://www.rays-counter.com/images/counter_01.gif" border="0"><img
+						src="http://www.rays-counter.com/images/counter_02.gif" border="0"><img
+						src="http://www.rays-counter.com/images/counter_03.gif" border="0"><img
+						src="http://www.rays-counter.com/images/counter_04.gif" border="0"><img
+						src="http://www.rays-counter.com/images/counter_05.gif" border="0"></td>
+			</tr>
+		</table>
+		<!--ここまで-->
 	</div>
 </body>
 
