工事中とダンシング赤ちゃんを追加

--- a/index.html
+++ b/index.html
@@ -26,6 +26,14 @@
 			</table>
 		</nobr>
 	</div>
+
+	<figure>
+		<legend>
+			<img src="./images/pics2762.gif">
+			<font face="ＭＳ Ｐ明朝">ただいま工事中です。ご迷惑おかけします。<img src="./images/pics2762.gif"></font>
+		</legend>
+		<img src="./images/dancing_baby.gif" alt="踊る赤ちゃん">
+	</figure>
 </body>
 
 </html>
