--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		</nobr>
 	</div>
 
-	<div class="window" style="margin: 32px; width: 1000px">
+	<div class="window" style="margin: 32px; width: calc(100vw - 64px)">
 		<div class="title-bar">
 			<div class="title-bar-text">お知らせ</div>
 			<div class="title-bar-controls">
