ギャラリーを追加

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -26,41 +27,57 @@
 				</tbody>
 			</table>
 		</nobr>
-	</div>
 
-	<div class="window" style="margin: 32px; width: calc(100vw - 64px)">
-		<div class="title-bar">
-			<div class="title-bar-text">お知らせ</div>
-			<div class="title-bar-controls">
-				<button aria-label="Minimize"></button>
-				<button aria-label="Maximize"></button>
-				<button aria-label="Close"></button>
+		<br>
+
+		<div class="window" style="width: 300px">
+			<div class="title-bar">
+				<div class="title-bar-text">ギャラリー</div>
+				<div class="title-bar-controls">
+					<button aria-label="Minimize"></button>
+					<button aria-label="Maximize"></button>
+					<button aria-label="Close"></button>
+				</div>
+			</div>
+			<div class="window-body">
+				<a href="./gallery.html">入室</a>
 			</div>
 		</div>
-		<figure>
-			<legend>
-				<img src="./images/pics2762.gif">
-				<font face="ＭＳ Ｐ明朝">ただいま工事中です。ご迷惑おかけします。<img src="./images/pics2762.gif"></font>
-			</legend>
-			<img src="./images/dancing_baby.gif" alt="踊る赤ちゃん">
-		</figure>
-		<div class="window-body">
-			<font face="ＭＳ Ｐ明朝">こんにちは！　今日の気分は？</font>
-			<div class="field-row">
-				<input id="radio1" type="radio" name="option-1">
-				<label for="radio1">最高！</label>
+
+		<div class="window" style="margin: 32px; width: calc(100vw - 64px)">
+			<div class="title-bar">
+				<div class="title-bar-text">お知らせ</div>
+				<div class="title-bar-controls">
+					<button aria-label="Minimize"></button>
+					<button aria-label="Maximize"></button>
+					<button aria-label="Close"></button>
+				</div>
 			</div>
-			<div class="field-row">
-				<input id="radio2" type="radio" name="option-2">
-				<label for="radio2">ふつう</label>
-			</div>
-			<div class="field-row">
-				<input id="radio3" type="radio" name="option-3">
-				<label for="radio3">悪い</label>
+			<figure>
+				<legend>
+					<img src="./images/pics2762.gif">
+					<font face="ＭＳ Ｐ明朝">ただいま工事中です。ご迷惑おかけします。<img src="./images/pics2762.gif"></font>
+				</legend>
+				<img src="./images/dancing_baby.gif" alt="踊る赤ちゃん">
+			</figure>
+			<div class="window-body">
+				<font face="ＭＳ Ｐ明朝">こんにちは！　今日の気分は？</font>
+				<div class="field-row">
+					<input id="radio1" type="radio" name="option-1">
+					<label for="radio1">最高！</label>
+				</div>
+				<div class="field-row">
+					<input id="radio2" type="radio" name="option-2">
+					<label for="radio2">ふつう</label>
+				</div>
+				<div class="field-row">
+					<input id="radio3" type="radio" name="option-3">
+					<label for="radio3">悪い</label>
+				</div>
 			</div>
 		</div>
-	</div>
 
+	</div>
 </body>
 
 </html>
