--- a/gallery.html
+++ b/gallery.html
@@ -29,7 +29,7 @@
 		</div>
 		<div class="window" style="width: 315px">
 			<div class="title-bar">
-				<div class="title-bar-text">model: hyou</div>
+				<div class="title-bar-text">model: 水仙</div>
 				<div class="title-bar-controls">
 					<button aria-label="Minimize"></button>
 					<button aria-label="Maximize"></button>
