fix: 画像サイズを小さめにした

--- a/gallery.html
+++ b/gallery.html
@@ -16,7 +16,7 @@
 
 		<div class="window" style="width: 315px">
 			<div class="title-bar">
-				<div class="title-bar-text">model: hyou</div>
+				<div class="title-bar-text">210829: hyou</div>
 				<div class="title-bar-controls">
 					<button aria-label="Minimize"></button>
 					<button aria-label="Maximize"></button>
@@ -24,12 +24,12 @@
 				</div>
 			</div>
 			<div class="window-body">
-				<img width="300px" src="./images/gallery/hyou-1.png">
+				<img width="300px" src="./images/gallery/hyou-1-bg-waterblue.jpg">
 			</div>
 		</div>
 		<div class="window" style="width: 315px">
 			<div class="title-bar">
-				<div class="title-bar-text">model: 水仙</div>
+				<div class="title-bar-text">210831: 水仙</div>
 				<div class="title-bar-controls">
 					<button aria-label="Minimize"></button>
 					<button aria-label="Maximize"></button>
@@ -37,7 +37,7 @@
 				</div>
 			</div>
 			<div class="window-body">
-				<img width="300px" src="./images/gallery/suisen.png">
+				<img width="300px" src="./images/gallery/kumori-suisen.png">
 			</div>
 		</div>
 	</div>
