画像の幅を300pxに変更

--- a/gallery.html
+++ b/gallery.html
@@ -24,7 +24,7 @@
 				</div>
 			</div>
 			<div class="window-body">
-				<img width="300px" src="./images/gallery/hyou-1-bg-waterblue.jpg">
+				<img src="./images/gallery/hyou-1-bg-waterblue.jpg">
 			</div>
 		</div>
 		<div class="window" style="width: 315px">
@@ -37,7 +37,7 @@
 				</div>
 			</div>
 			<div class="window-body">
-				<img width="300px" src="./images/gallery/kumori-suisen.png">
+				<img src="./images/gallery/kumori-suisen.png">
 			</div>
 		</div>
 	</div>
