--- a/index.html
+++ b/index.html
@@ -30,19 +30,66 @@
 
 		<br>
 
-		<div class="window" style="width: 300px">
-			<div class="title-bar">
-				<div class="title-bar-text">ギャラリー</div>
-				<div class="title-bar-controls">
-					<button aria-label="Minimize"></button>
-					<button aria-label="Maximize"></button>
-					<button aria-label="Close"></button>
+		<div style="display: flex;">
+			<div class="window" style="width: 200px">
+				<div class="title-bar">
+					<div class="title-bar-text">ギャラリー</div>
+					<div class="title-bar-controls">
+						<button aria-label="Minimize"></button>
+						<button aria-label="Maximize"></button>
+						<button aria-label="Close"></button>
+					</div>
+				</div>
+				<div class="window-body">
+					<a href="./gallery.html">入室</a>
+				</div>
+				<div class="title-bar">
+					<div class="title-bar-text">Twitter</div>
+					<div class="title-bar-controls">
+						<button aria-label="Minimize"></button>
+						<button aria-label="Maximize"></button>
+						<button aria-label="Close"></button>
+					</div>
+				</div>
+				<div class="window-body">
+					<a href="https://twitter.com/tsurutaaaaaa_">いく</a>
+				</div>
+				<div class="title-bar">
+					<div class="title-bar-text">GitHub</div>
+					<div class="title-bar-controls">
+						<button aria-label="Minimize"></button>
+						<button aria-label="Maximize"></button>
+						<button aria-label="Close"></button>
+					</div>
+				</div>
+				<div class="window-body">
+					<a href="https://github.com/zztkm">いく</a>
+				</div>
+				<div class="title-bar">
+					<div class="title-bar-text">Scrapbox</div>
+					<div class="title-bar-controls">
+						<button aria-label="Minimize"></button>
+						<button aria-label="Maximize"></button>
+						<button aria-label="Close"></button>
+					</div>
+				</div>
+				<div class="window-body">
+					<a href="https://scrapbox.io/zztkm/">いく</a>
+				</div>
+				<div class="title-bar">
+					<div class="title-bar-text">OpenProcessing</div>
+					<div class="title-bar-controls">
+						<button aria-label="Minimize"></button>
+						<button aria-label="Maximize"></button>
+						<button aria-label="Close"></button>
+					</div>
+				</div>
+				<div class="window-body">
+					<a href="https://openprocessing.org/user/283509/?view=sketches">いく</a>
 				</div>
 			</div>
-			<div class="window-body">
-				<a href="./gallery.html">入室</a>
-			</div>
 		</div>
+
 
 		<div class="window" style="margin: 32px; width: calc(100vw - 64px)">
 			<div class="title-bar">
