--- a/index.html
+++ b/index.html
@@ -44,6 +44,17 @@
 					<a href="./gallery.html">入室</a>
 				</div>
 				<div class="title-bar">
+					<div class="title-bar-text">東京回転寿司倶楽部 Blog</div>
+					<div class="title-bar-controls">
+						<button aria-label="Minimize"></button>
+						<button aria-label="Maximize"></button>
+						<button aria-label="Close"></button>
+					</div>
+				</div>
+				<div class="window-body">
+					<a href="https://blog.tsurutatakumi.info/">見にいく</a>
+				</div>
+				<div class="title-bar">
 					<div class="title-bar-text">Twitter</div>
 					<div class="title-bar-controls">
 						<button aria-label="Minimize"></button>
@@ -52,7 +63,7 @@
 					</div>
 				</div>
 				<div class="window-body">
-					<a href="https://twitter.com/tsurutaaaaaa_">いく</a>
+					<a href="https://twitter.com/tsurutaaaaaa_">見にいく</a>
 				</div>
 				<div class="title-bar">
 					<div class="title-bar-text">GitHub</div>
@@ -63,7 +74,7 @@
 					</div>
 				</div>
 				<div class="window-body">
-					<a href="https://github.com/zztkm">いく</a>
+					<a href="https://github.com/zztkm">見にいく</a>
 				</div>
 				<div class="title-bar">
 					<div class="title-bar-text">Scrapbox</div>
@@ -74,7 +85,7 @@
 					</div>
 				</div>
 				<div class="window-body">
-					<a href="https://scrapbox.io/zztkm/">いく</a>
+					<a href="https://scrapbox.io/zztkm/">見にいく</a>
 				</div>
 				<div class="title-bar">
 					<div class="title-bar-text">OpenProcessing</div>
@@ -85,7 +96,7 @@
 					</div>
 				</div>
 				<div class="window-body">
-					<a href="https://openprocessing.org/user/283509/?view=sketches">いく</a>
+					<a href="https://openprocessing.org/user/283509/?view=sketches">見にいく</a>
 				</div>
 			</div>
 		</div>
