--- a/index.html
+++ b/index.html
@@ -101,6 +101,20 @@
 			</div>
 		</div>
 
+		<div class="window-body">
+			<div class="title-bar">
+				<div class="title-bar-text">最新の曲</div>
+				<div class="title-bar-controls">
+					<button aria-label="Minimize"></button>
+					<button aria-label="Maximize"></button>
+					<button aria-label="Close"></button>
+				</div>
+			</div>
+			<iframe width="560" height="315"
+				src="https://musiclab.chromeexperiments.com/Song-Maker/embed/4782585026183168" frameborder="0"
+				allowfullscreen></iframe>
+		</div>
+
 
 		<div class="window" style="margin: 32px; width: calc(100vw - 64px)">
 			<div class="title-bar">
