今年の目標を追記

--- a/index.html
+++ b/index.html
@@ -100,7 +100,45 @@
 				</div>
 			</div>
 		</div>
+		<div class="window" style="margin: 32px; width: calc(100vw - 64px)">
+			<div class="title-bar">
+				<div class="title-bar-text">2022の目標とお知らせ</div>
+				<div class="title-bar-controls">
+					<button aria-label="Minimize"></button>
+					<button aria-label="Maximize"></button>
+					<button aria-label="Close"></button>
+				</div>
+			</div>
+			<ul>
+				<li>APEXマスター</li>
+				<li>ダーツライブRt.10以上</li>
+				<li>毎日水をたくさん飲む</li>
+				<li>隔週で片付ける</li>
+				<li>CSの独学でやりたいことを50%以上やる
+					<ul>
+						<li>
+							<a href="https://github.com/zztkm/computer-science-learning/issues/1">
+								GitHub Issue
+							</a>
+						</li>
+					</ul>
+				</li>
 
+				<li>イラスト作成(手書きをスキャンしたやつ</li>
+				<li>掲示板作成(このサイトにつける</li>
+				<li>音楽作ってみたい</li>
+				<li>creative coding 勉強する</li>
+				<li>generative な映像制作</li>
+				<li>GLSL とか</li>
+			</ul>
+			<figure>
+				<legend>
+					<img src="./images/pics2762.gif">
+					<font face="ＭＳ Ｐ明朝">常に工事中です。ご迷惑おかけします。<img src="./images/pics2762.gif"></font>
+				</legend>
+				<img src="./images/dancing_baby.gif" alt="踊る赤ちゃん">
+			</figure>
+		</div>
 		<div class="window-body">
 			<div class="title-bar">
 				<div class="title-bar-text">最新の曲</div>
@@ -114,41 +152,6 @@
 				src="https://musiclab.chromeexperiments.com/Song-Maker/embed/4782585026183168" frameborder="0"
 				allowfullscreen></iframe>
 		</div>
-
-
-		<div class="window" style="margin: 32px; width: calc(100vw - 64px)">
-			<div class="title-bar">
-				<div class="title-bar-text">お知らせ</div>
-				<div class="title-bar-controls">
-					<button aria-label="Minimize"></button>
-					<button aria-label="Maximize"></button>
-					<button aria-label="Close"></button>
-				</div>
-			</div>
-			<figure>
-				<legend>
-					<img src="./images/pics2762.gif">
-					<font face="ＭＳ Ｐ明朝">ただいま工事中です。ご迷惑おかけします。<img src="./images/pics2762.gif"></font>
-				</legend>
-				<img src="./images/dancing_baby.gif" alt="踊る赤ちゃん">
-			</figure>
-			<div class="window-body">
-				<font face="ＭＳ Ｐ明朝">こんにちは！　今日の気分は？</font>
-				<div class="field-row">
-					<input id="radio1" type="radio" name="option-1">
-					<label for="radio1">最高！</label>
-				</div>
-				<div class="field-row">
-					<input id="radio2" type="radio" name="option-2">
-					<label for="radio2">ふつう</label>
-				</div>
-				<div class="field-row">
-					<input id="radio3" type="radio" name="option-3">
-					<label for="radio3">悪い</label>
-				</div>
-			</div>
-		</div>
-
 	</div>
 </body>
 
