--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <!--link rel="icon" type="image/svg+xml" href="/src/favicon.svg" /-->
+  <link rel="stylesheet" href="./src/index.css" type="text/css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Vite App</title>
 </head>
